infra/frontend/rs-01.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kubernetes-node-server-replicaset-frontend
  namespace: ui
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: kubernetes-node-server-replicaset-frontend
      rbac: frontend-service-account
  template:
    metadata:
      labels:
        app: kubernetes-node-server-replicaset-frontend
        rbac: frontend-service-account
    spec:
      serviceAccountName: frontend-service-account
      containers:
        - name: kubernetes-node-server-replicaset-frontend
          image: 298906029222.dkr.ecr.us-east-1.amazonaws.com/webapp-frontend:d6a076
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 100
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 100
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "500m"
