infra/frontend/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uiservice
  namespace: ui
spec:
  selector:
    app: kubernetes-node-server-replicaset-frontend
  ports:
    - port: 80
      targetPort: 80
