infra/frontend/ingress_frontend.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uiingress
  namespace : ui
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /ui/?(.*)
            backend:
              serviceName: uiservice
              servicePort: 80
  # tls:
  #   - hosts:
  #       - public_hostname
  #     secretName: app-tls
